--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <div>
+        <img src="./imgs/WIND_Computer_Services.png" alt="Hello World from Space">
+    </div>
     <p>This is the first file in my new Git Repo</p>
     <p>A new line in our file</p>
 </body>
