--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hello World!</h1>
     <div>
-        <img src="./imgs/WIND_Computer_Services.png" alt="Hello World from Space">
+        <img src="./imgs/WIND_Computer_Services.png" alt="">
     </div>
     <p>This is the first file in my new Git Repo</p>
     <p>A new line in our file</p>
