Create a new sign-in form

--- a/index.html
+++ b/index.html
@@ -11,5 +11,27 @@
     <h1>Hello World!</h1>
     <p>This is the first file in my new Git Repo</p>
     <p>A new line in our file</p>
+    <form action="" method="POST" name="signin_form">
+        <table>
+            <caption>SIGNIN FORM</caption>
+            <tr>
+                <td>Username:</td>
+                <td>
+                    <input type="text" name="txt_username" value="">
+                </td>
+            </tr>
+            <tr>
+                <td>Password:</td>
+                <td>
+                    <input type="password" name="txt_password" value="">
+                </td>
+            </tr>
+            <tr align="center">
+                <td colspan="2">
+                    <input type="button" name="btn_signin_submit" value="Sign In">
+                </td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
