--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Hello World!</h1>
     <p>This is the first file in my new Git Repo</p>
     <p>A new line in our file</p>
+    <h1 id="emergency">EMERGENCY</h1>
 </body>
 </html>
