--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     </div>
     <p>This is the first file in my new Git Repo</p>
     <p>A new line in our file</p>
+    <div>
+        <img id="avatar" src="./imgs/avatar_3x4.png" alt="">
+    </div>
 </body>
 </html>
