Updated index.html with a new line for new branch

--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
         </table>
     </form>
     <p>This line to test push changes to GitHub</p>
+    <p>html-skeleton branch</p>
 </body>
 </html>
