--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <h1>Hello World!</h1>
     <div>
-        <img src="./imgs/WIND_Computer_Services.png" alt="WIND Computer Services">
+        <img src="./imgs/WIND_Computer_Services.png" alt="">
     </div>
     <p>This is the first file in my new Git Repo</p>
     <p>A new line in our file</p>
     <h1 id="emergency">EMERGENCY</h1>
     <div>
-        <img id="avatar" src="./imgs/avatar_3x4.png" alt="My avatar with dimension is 3cmx4cm">
+        <img id="avatar" src="./imgs/avatar_3x4.png" alt="">
     </div>
     <form action="" method="POST" name="signin_form">
         <table>
